pass securitypolicy and proxyhost-mapping on the command line arguments